--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,16 +15,16 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <% if !user_signed_in? %>
-          <li><%= link_to "Já é um membro?", "#" %></li>
+          <li><%= link_to "Já é um membro?", new_user_session_path %></li>
           <li><%= link_to "Sobre", sobre_path %></li>
         <% end %>
 
         <% if user_signed_in? %>
-          <li><%= link_to "Home", root_path%></li>
+          <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Meus anúncios", "#" %></li>
           <li><%= link_to "Criar Anúncio", "#"%></li>
-          <li><%= link_to "Configurações", "#" %></li>  
-          <li><%= link_to "Sair", "#" %></li>
+          <li><%= link_to "Configurações", edit_user_registration_path %></li>  
+          <li><%= link_to "Sair", destroy_user_session_path, method: :delete %></li>
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
