--- a/app/views/anuncios/_form.html.erb
+++ b/app/views/anuncios/_form.html.erb
@@ -1,21 +1,25 @@
-<%= form_for(@anuncio) do |f| %>
-  <% if @anuncio.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@anuncio.errors.count, "error") %> prohibited this anuncio from being saved:</h2>
-
-      <ul>
-      <% @anuncio.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+<%= form_for @pin, html: { multipart: true } do |f| %>
+  <% if @pin.errors.any? %>
+      <% @pin.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
       <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_field :description %>
+  <div class="form-group">
+    <%= f.label "Imagem" %>
+    <%= f.file_field :image, class: "form-control" %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-group">
+    <%= f.label "Título" %>
+    <%= f.text_field :title, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label "Descrição" %>
+    <%= f.text_area :description, :rows => 3, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.submit "Criar", class: "btn btn-success" %>
   </div>
 <% end %>
