--- a/app/views/anuncios/index.html.erb
+++ b/app/views/anuncios/index.html.erb
@@ -1,25 +1,29 @@
-<h1>Listing anuncios</h1>
+<%= render 'pages/home' unless user_signed_in? %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div id="pins" class="transitions-enabled">
+  <% @anuncios.each do |anuncio| %>
+    <div class="box panel panel-default">
+      <%= link_to image_tag(pin.image.url(:medium)), anuncio %>
+      <div class="panel-body">
+        <%= anuncio.title %><br/>
+        <strong><%= anuncio.user.name if anuncio.user %></strong>
+        
+        <% if current_user && anuncio.user == current_user %>
+          <div class="actions">
+            <%= link_to edit_anuncio_path(anuncio) do %>
+              <span class="glyphicon glyphicon-edit"></span>Editar
+            <% end %>
+            <%= link_to anuncio, method: :delete, data: { confirm: 'Você tem certeza?' } do %>
+              <span class="glyphicon glyphicon-trash"></span>Deletar
+            <% end %>
+          </div>
+        <% end %>
+        
+      </div>
+    </div>
+  <% end %>
+</div>
 
-  <tbody>
-    <% @anuncios.each do |anuncio| %>
-      <tr>
-        <td><%= anuncio.description %></td>
-        <td><%= link_to 'Show', anuncio %></td>
-        <td><%= link_to 'Edit', edit_anuncio_path(anuncio) %></td>
-        <td><%= link_to 'Destroy', anuncio, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Anuncio', new_anuncio_path %>
+<div class="text-center">
+   <%= will_paginate @posts, renderer: BootstrapPagination::Rails %>
+</div>
