--- a/app/views/anuncios/new.html.erb
+++ b/app/views/anuncios/new.html.erb
@@ -1,5 +1,16 @@
-<h1>New anuncio</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', anuncios_path %>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h1>Novo anúncio</h1>
+  </div>
+  
+  <div class="panel-body">
+    <div class="form-group">
+      <%= render 'form' %>
+    </div>
+  </div>
+  
+  <div class="panel-footer">
+    <%= link_to 'Voltar', anuncios_path %>
+  </div>
+  
+</div>
