--- a/app/assets/stylesheets/bootsrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootsrap_and_customization.css.scss
@@ -40,3 +40,22 @@ $icon-font-path: 'bootstrap/'; /*Corrects the issue of not showing glyphicons */
   a:visited {color: #27ae60; font-weight: bold; text-decoration: none; }
   a:hover {color: #27ae60; font-weight: bold; text-decoration: underline; }
 }
+
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
+}
