--- a/app/views/anuncios/show.html.erb
+++ b/app/views/anuncios/show.html.erb
@@ -2,7 +2,7 @@
   <div class="col-md-offset-2 col-md-8">
     <div class="panel panel-default">
       <div class="panel-heading text-center">
-        <%= image_tag @anuncio.image.url %>
+        <%= image_tag @anuncio.image.url(:medium) %>
       </div>
       <div class="panel-body">
         <p><%= @anuncio.title %></p>
