--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <div class="footer">
   <div class="container">
-    <p class="text-muted">© 2014 - Celulista</p>
+    <p class="text-muted text-center">© 2014 - Celulista</p>
   </div>
 </div>
